<resources>
    <string name="app_name">theBinaryBrain_quizApp</string>
    <string name="login">Log in</string>
    <string name="Email">email</string>
    <string name="welcomeback">Welcome Back!!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="btn_login">Log in</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="hello_there">Hello there,</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>